--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Octocat's homepage
 description: Bookmark this to keep an eye on my project updates!
-remote_theme: pages-themes/slate@v0.2.0
+remote_theme: "jekyll/minima@1e8a445"
 plugins:
 - jekyll-remote-theme
