--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
-title: Octocat's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: "Octocat's homepage"
+description: "Bookmark this to keep an eye on my project updates!"
+author: "Benjamin Aicheler"
 theme: minima
+markdown: kramdown
+
+header_pages:
+  - index.md
+  - about.md
+  - projects.md
