--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Octocat's homepage"
-description: "Bookmark this to keep an eye on my project updates!"
+title: "Benjamin's homepage"
+description: ""
 author: "Benjamin Aicheler"
 theme: minima
 markdown: kramdown
