--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Benjamin's homepage"
+title: "Benjamin Aicheler"
 description: ""
-author: "Benjamin Aicheler"
+author: ""
 theme: minima
 markdown: kramdown
 
@@ -9,3 +9,14 @@ header_pages:
   - blog.md
   - projects.md
   - about.md
+
+paginate: 5
+paginate_path: "/blog/page:num"
+permalink: "/:title/"
+
+url: "https://benjamin-aicheler.github.io"
+baseurl: ""
+
+minima:
+  social_links:
+    - { platform: github, user_url: "https://github.com/benjamin-aicheler" }
