--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Benjamin Aicheler"
+title: "Benjamin's Blog"
 description: ""
-author: ""
+author: "Benjamin"
 theme: minima
 markdown: kramdown
 
