--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Benjamin's Blog"
 description: ""
 author: "Benjamin"
-theme: minima
+theme: jekyll-theme-slate
 markdown: kramdown
 
 header_pages:
