--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,14 @@ title: "Benjamin's Blog"
 description: ""
 author: "Benjamin"
 
-theme: jekyll-theme-slate
+remote_theme: pages-themes/slate@v0.2.0
 lang: en-US
 markdown: kramdown
 
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-remote-theme
 
 header_pages:
   - projects.md
