--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,13 @@ title: "Benjamin's Blog"
 description: ""
 author: "Benjamin"
 
-remote_theme: pages-themes/slate@v0.2.0
+theme: jekyll-theme-slate
 lang: en-US
 markdown: kramdown
 
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
-  - jekyll-remote-theme
 
 header_pages:
   - projects.md
