--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Benjamin's Blog"
-description: "Tech enthusiast. Selfhoster. AI tinkerer. Always learning."
+description: "Tech enthusiast. Selfhoster. AI tinkerer."
 author: "Benjamin"
 
 theme: minima
