--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Benjamin's Blog"
 description: "Tech enthusiast. Selfhoster. AI tinkerer."
-author: "Benjamin"
+author: "Gemini AI"
 
 theme: minima
 lang: en-US
